# VectraDB

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy-output.txt  payload.json
.github/workflows/: ci.yml  docker.yml  publish-pypi.yml  release-binaries.yml  release.yml  rust.yml
bench/: Cargo.toml  compare_dbs.py  compare_inprocess.py  preload.py  profile_rust.rs  qps_benchmark.py  qps_results.md  results.md  run-bench.ps1
bench/src/: profile_search.rs
cargo/: config.toml
docs/: faiss_comparison.md  ir_theory.md  test_results.md
examples/: Cargo.toml  basic_usage.rs
proto/: vectradb.proto
python-client/: .gitignore  README.md  generate_proto.py  pyproject.toml  setup.py  test_comprehensive.py  vectradb_simple.py
python-client/examples/: basic_async.py  basic_sync.py  context_manager.py  error_handling.py
python-client/tests/: README.md  conftest.py  test_async_client.py  test_integration.py  test_sync_client.py
python-client/vectradb_client/: __init__.py  async_client.py  client.py  types.py
scripts/: publish.ps1  publish.sh
src/api/: Cargo.toml
src/api/src/: auth.rs  lib.rs  metrics.rs  rate_limit.rs
src/chunkers/: Cargo.toml  README.md
src/chunkers/examples/: Cargo.toml  chunking_examples.rs
src/chunkers/src/: code.rs  document.rs  lib.rs  markdown.rs  production.rs
src/components/: Cargo.toml
src/components/src/: filter.rs  gpu.rs  indexing.rs  lib.rs  similarity.rs  storage.rs  tensor.rs  vector_operations.rs
src/embeddings/: Cargo.toml  README.md
src/embeddings/src/: cohere.rs  huggingface.rs  lib.rs  ollama.rs  openai.rs
src/eval/: Cargo.toml
src/eval/src/: lib.rs
src/rag/: Cargo.toml
src/rag/src/: graph_agent.rs  lib.rs  llm.rs  pipeline.rs
src/search/: Cargo.toml
src/search/src/: distance.wgsl  es4d.rs  gpu.rs  hnsw.rs  ivf.rs  lib.rs  lsh.rs  pq.rs  simd.rs  sq.rs  tensor.rs
src/server/: Cargo.toml  build.rs
src/server/proto/: vectradb.proto
src/server/src/: grpc.rs  main.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs
src/tfidf/: Cargo.toml
src/tfidf/src/: lib.rs  scoring.rs  tokenizer.rs
src/vectradb/: Cargo.toml
src/vectradb/src/: lib.rs
src_py/: Cargo.toml  pyproject.toml  setup.py
src_py/src/: lib.rs
tests/: Cargo.toml  stress_tests.rs
