[workspace]
resolver = "2"
members = [
    "src/components",
    "src/search",
    "src/storage",
    "src/chunkers",
    "src/api",
    "src_py",
    "src/server",
    "tests"
]

[workspace.dependencies]
# Core dependencies
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"

# Database and storage
sled = "0.34"

# API dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Graph algorithms
petgraph = "0.6"
rand = "0.8"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Testing
criterion = "0.5"
proptest = "1.0"
tempfile = "3.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
