[package]
name = "vectradb-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "vectradb_py"
crate-type = ["cdylib"]

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pyo3 = { workspace = true }
vectradb-components = { path = "../src/components" }
vectradb-storage = { path = "../src/storage" }
vectradb-search = { path = "../src/search" }
vectradb-chunkers = { path = "../src/chunkers" }
