[package]
name = "vectradb-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for VectraDB"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[lib]
name = "vectradb_py"
crate-type = ["cdylib"]

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pyo3 = { workspace = true }
vectradb-components = "0.1.0"
vectradb-storage = "0.1.0"
vectradb-search = "0.1.0"
vectradb-chunkers = "0.1.0"
