[build-system]
requires = ["setuptools", "wheel", "pyo3-setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "vectradb-py"
version = "0.1.0"
description = "Python bindings for VectraDB - High-performance vector database"
authors = [{name = "VectraDB Team", email = "team@vectradb.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "mypy",
    "flake8",
]

[tool.setuptools-rust]
bindings = "pyo3"
module-name = "vectradb_py"

