[package]
name = "vectradb-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
vectradb-components = { path = "../components" }
vectradb-storage = { path = "../storage" }
vectradb-search = { path = "../search" }
clap = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
