[package]
name = "vectradb-api"
version = "0.1.0"
edition = "2021"
description = "API definitions for VectraDB in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[features]
default = []
gpu = ["vectradb-search/gpu", "vectradb-storage/gpu"]

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
vectradb-components = { path = "../components" }
vectradb-storage = { path = "../storage" }
vectradb-search = { path = "../search" }
vectradb-embeddings = { path = "../embeddings" }
clap = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
