[package]
name = "vectradb-components"
version = "0.1.0"
edition = "2021"
description = "Production-grade vector database components in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
ndarray = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
