[package]
name = "vectradb-rag"
version = "0.1.0"
edition = "2021"
description = "RAG pipeline and graph-based retrieval agent for VectraDB"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
ndarray = { workspace = true }
vectradb-components = { path = "../components" }
vectradb-embeddings = { path = "../embeddings" }
vectradb-storage = { path = "../storage" }
