[package]
name = "vectradb-search"
version = "0.1.0"
edition = "2021"
description = "Production-grade vector search algorithms in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
petgraph = "0.6"
vectradb-components = { version = "0.1.0" }
