[package]
name = "vectradb-search"
version = "0.1.0"
edition = "2021"
description = "Production-grade vector search algorithms in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
petgraph = "0.6"
vectradb-components = { path = "../components" }

# GPU (optional)
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }
