[package]
name = "vectradb-server"
version = "0.1.0"
edition = "2021"
description = "Production-grade vector database server in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"
include = ["src/**", "proto/**", "Cargo.toml", "build.rs", "README.md"]

[[bin]]
name = "vectradb-server"
path = "src/main.rs"

[dependencies]
vectradb-api = "0.1.0"
vectradb-storage = "0.1.0"
vectradb-search = "0.1.0"
vectradb-components = "0.1.0"
ndarray = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }





