[package]
name = "vectradb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
tempfile = { workspace = true }
vectradb-components = { path = "../components" }
vectradb-search = { path = "../search" }
