[package]
name = "vectradb-storage"
version = "0.1.0"
edition = "2021"
description = "Storage backend for VectraDB in Rust"
license = "MIT"
repository = "https://github.com/Amrithesh-Kakkoth/VectraDB"
homepage = "https://github.com/Amrithesh-Kakkoth/VectraDB"
documentation = "https://github.com/Amrithesh-Kakkoth/VectraDB#readme"

[features]
default = []
gpu = ["vectradb-search/gpu"]

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
vectradb-components = { path = "../components" }
vectradb-search = { path = "../search" }
vectradb-tfidf = { path = "../tfidf" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
